--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ about:
         href: https://github.com/denismangia
       - icon: linkedin
         text: LinkedIn
-        href: https://linkedin.com/denismangia
+        href: https://linkedin.com/in/denismangia
 ---
 
 A little bit about me and my life.
